--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,6 +51,13 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "normalize";
 
 /*--------------------------------------------------------------
+# Third party libs
+--------------------------------------------------------------*/
+//@import "./../bower_components/typesettings/typesettings";
+//@import "./../node_modules/foundation/scss/foundation";
+@import "./../node_modules/susy/sass/susy";
+
+/*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
 @import "typography/typography";
@@ -106,6 +113,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "media/media";
 
 /*--------------------------------------------------------------
-# Third party libs
+# Layout
 --------------------------------------------------------------*/
-@import "./../bower_components/typesettings/typesettings"
+@import "layout/scaffolding";  
+@import "layout/header";
