--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*!
 Theme Name: CETransportation
 Theme URI: http://underscores.me/
@@ -222,6 +221,9 @@ th {
   padding: 0; }
 
 /*--------------------------------------------------------------
+# Third party libs
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
 body,
@@ -341,7 +343,6 @@ table {
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
@@ -356,15 +357,12 @@ input[type="submit"] {
   line-height: 1;
   padding: .6em 1em .4em;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); }
-  button:hover,
   input[type="button"]:hover,
   input[type="reset"]:hover,
   input[type="submit"]:hover {
     border-color: #ccc #bbb #aaa;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02); }
-  button:active, button:focus,
-  input[type="button"]:active,
-  input[type="button"]:focus,
+  input[type="button"]:active, input[type="button"]:focus,
   input[type="reset"]:active,
   input[type="reset"]:focus,
   input[type="submit"]:active,
@@ -437,10 +435,10 @@ a {
 ## Menus
 --------------------------------------------------------------*/
 .main-navigation {
-  clear: both;
   display: block;
   float: left;
-  width: 100%; }
+  width: 100%;
+  margin-top: 2rem; }
   .main-navigation ul {
     display: none;
     list-style: none;
@@ -465,11 +463,14 @@ a {
     .main-navigation ul li.focus > ul {
       left: auto; }
   .main-navigation li {
-    float: left;
-    position: relative; }
+    float: right;
+    position: relative;
+    margin-left: 1rem;
+    margin-right: 1rem; }
   .main-navigation a {
     display: block;
-    text-decoration: none; }
+    text-decoration: none;
+    color: white; }
 
 /* Small menu. */
 .menu-toggle,
@@ -706,170 +707,239 @@ object {
   display: block; }
 
 /*--------------------------------------------------------------
-# Third party libs
+# Layout
 --------------------------------------------------------------*/
-html {
-  font-size: 100%; }
+.site-header, .site-footer {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto; }
+  .site-header:after, .site-footer:after {
+    content: " ";
+    display: block;
+    clear: both; }
 
-body {
-  margin: 0;
-  padding: 0;
-  line-height: 1.5; }
+.home-container, .cet-container {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important; }
+  .home-container:after, .cet-container:after {
+    content: " ";
+    display: block;
+    clear: both; }
 
-html {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+.cet-container h3 {
+  display: inline-block;
+  border-bottom: 8px solid #85C346;
+  margin-bottom: 2rem; }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Georgia, "Times New Roman", serif;
-  font-weight: 400;
-  color: #000; }
+.header-bg, .footer-bg {
+  background-image: url("http://src.wordpress-develop.dev/wp-content/uploads/2016/11/hero-banner.png");
+  background-repeat: no-repeat;
+  background-size: cover; }
 
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  margin-top: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: bold; }
+.footer-bg {
+  background-position: bottom;
+  -webkit-clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 100%);
+  height: 300px; }
 
-h1, .h1 {
-  margin-bottom: 0.18756em;
-  font-size: 1.9994em;
-  line-height: 1.12534; }
-  @media (min-width: 43.75em) {
-    h1, .h1 {
-      margin-bottom: 0.13264em;
-      font-size: 2.82715em;
-      line-height: 1.06114; } }
-  @media (min-width: 56.25em) {
-    h1, .h1 {
-      margin-bottom: 0.09381em;
-      font-size: 3.99758em;
-      line-height: 0.93807; } }
+body.home .header-bg {
+  margin-bottom: 172px;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0 80%);
+  -moz-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0 80%); }
 
-h2, .h2 {
-  margin-bottom: 0.26521em;
-  font-size: 1.414em;
-  line-height: 1.32603; }
-  @media (min-width: 43.75em) {
-    h2, .h2 {
-      margin-bottom: 0.18756em;
-      font-size: 1.9994em;
-      line-height: 1.12534; } }
-  @media (min-width: 56.25em) {
-    h2, .h2 {
-      margin-bottom: 0.13264em;
-      font-size: 2.82715em;
-      line-height: 1.06114; } }
+body.home .banner {
+  height: 500px !important; }
 
-h3, .h3 {
-  margin-bottom: 0.26521em;
-  font-size: 1.414em;
-  line-height: 1.32603; }
-  @media (min-width: 56.25em) {
-    h3, .h3 {
-      margin-bottom: 0.18756em;
-      font-size: 1.9994em;
-      line-height: 1.12534; } }
+.site-branding {
+  width: 32.20339%;
+  float: left;
+  margin-right: 1.69492%; }
 
-h4, .h4 {
-  margin-bottom: 0.26521em;
-  font-size: 1.414em;
-  line-height: 1.32603; }
+.main-navigation {
+  width: 66.10169%;
+  float: right;
+  margin-right: 0; }
 
-h5, .h5,
-h6, .h6 {
-  margin-bottom: 0.375em;
-  font-size: 1em;
-  line-height: 1.5; }
-
-p {
-  margin-top: 0;
-  margin-bottom: 1.5em;
-  padding-top: 0;
-  padding-bottom: 0;
-  max-width: 36em; }
-  @media (min-width: 43.75em) {
-    p {
-      text-align: justify; } }
-
-p + p {
-  margin-top: -1.5em;
-  text-indent: 1.5em; }
-
-small,
-.font-small {
-  font-size: 0.70721em;
-  line-height: 1.59075; }
-
-em {
-  font-style: italic; }
-
-strong {
-  font-weight: bold; }
-
-blockquote {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+.banner {
+  width: 100%;
+  float: left;
   margin-left: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-left: 1.5em;
-  border-left: 6px solid gray;
-  font-family: Georgia, "Times New Roman", serif; }
-  blockquote p {
-    margin-bottom: 0.75em; }
-  blockquote footer cite:before {
-    content: " – "; }
+  margin-right: 0;
+  height: 200px; }
+  .banner .home-h, .banner .overview-h {
+    color: white;
+    text-transform: uppercase;
+    font-size: 2rem;
+    text-align: center; }
+  .banner .home-h {
+    margin-top: 10rem; }
+  .banner .overview-h {
+    margin-top: 3rem; }
+  .banner p {
+    color: white; }
 
-pre,
-code {
-  font-family: "Lucida Console", Monaco, monospace; }
+.triangle-container {
+  position: absolute;
+  top: 560px;
+  left: 0;
+  right: 0;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto; }
+  .triangle-container:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  .triangle-container h2 {
+    clear: none; }
+  .triangle-container p {
+    margin: 0; }
 
-time,
-.time {
-  text-transform: uppercase; }
+.triangle-clip {
+  shape-outside: polygon(0% 0%, 100% 62px, 100% 0%);
+  text-align: justify;
+  float: right;
+  width: 100%;
+  height: 200px; }
 
-ol,
-ul,
-dl {
-  margin-top: 0;
-  margin-bottom: 1.5em;
-  margin-left: 1.5em;
-  padding-top: 0;
-  padding-bottom: 0; }
+.home-services, .home-projects {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  .home-services h3, .home-projects h3 {
+    display: inline;
+    font-size: 1.6rem;
+    border-bottom: solid 6px #85C346; }
 
-ul ul,
-ol ol,
-dl dl {
-  margin-left: 0; }
+.sow-carousel-title a.sow-carousel-next, .sow-carousel-title a.sow-carousel-previous {
+  margin-top: 90px;
+  color: #222;
+  background: none;
+  font-size: 20px;
+  line-height: 20px;
+  width: 20px; }
 
-ul {
-  list-style: disc; }
+.sow-carousel-title a.sow-carousel-next {
+  float: right;
+  margin-right: -100px; }
 
-ol {
-  list-style: decimal; }
+.sow-carousel-title a.sow-carousel-previous {
+  float: left;
+  margin-left: -100px; }
 
-abbr {
-  font-variant: small-caps;
-  font-weight: 600;
-  text-transform: lowercase; }
+button.contact-btn {
+  background-color: #054F96;
+  width: 140px;
+  height: 50px;
+  color: white;
+  border: none; }
 
-abbr[title]:hover {
-  cursor: help; }
-
-hr {
-  margin-top: 1.5em;
-  margin-bottom: 0;
+button.more-btn {
+  background-color: #85C346;
+  width: 140px;
+  height: 50px;
+  color: white;
   border: none;
-  border-top-color: #000;
-  border-top-style: solid;
-  border-top-width: 1px;
-  padding-top: 1.4375em; }
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
+.post-edit-link {
+  display: none; }
+
+.site-content {
+  background-color: #f6f6f6; }
+
+.contact-section-bg {
+  background-color: white; }
+
+.home-more-btn {
+  text-align: center; }
+
+.hentry {
+  margin-bottom: 0 !important; }
+
+.quote {
+  font-weight: 100;
+  font-style: italic;
+  margin-top: 2rem;
+  text-align: center;
+  width: 49.15254%;
+  float: right;
+  margin-right: 0; }
+
+.contact-section {
+  padding-top: 2rem;
+  text-align: center;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto; }
+  .contact-section:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  .contact-section span {
+    margin-top: 1rem !important;
+    text-align: right;
+    font-size: 1.3rem;
+    color: #054F96;
+    font-weight: 700;
+    margin-right: 2rem; }
+  .contact-section .contact-info {
+    width: 100%;
+    float: left;
+    margin-left: 0;
+    margin-right: 0; }
+
+.projects-row {
+  border-top: 8px dashed white;
+  margin-bottom: 2rem;
+  margin-top: 1rem; }
+
+.footer {
+  padding: 3em 10;
+  width: 100%; }
+  .footer .footer-logo {
+    margin-bottom: 2em;
+    text-align: center; }
+    .footer .footer-logo img {
+      height: 3em; }
+  .footer .footer-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 1.5em; }
+  .footer ul {
+    flex-basis: 13em;
+    flex-shrink: 0;
+    margin-bottom: 3em;
+    padding: 0;
+    margin-top: 7rem; }
+  .footer li {
+    line-height: 1.5em;
+    list-style: none;
+    text-align: center; }
+  .footer li a {
+    color: rgba(255, 255, 255, 0.4);
+    text-decoration: none; }
+    .footer li a:focus, .footer li a:hover {
+      color: white; }
+  .footer li h3 {
+    color: white;
+    font-size: 1em;
+    margin-bottom: 0.4em; }
+  .footer hr {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    margin: 0 auto 1.5em;
+    width: 12em; }
+  .footer p {
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: auto;
+    max-width: 35em;
+    text-align: center; }
